[package]
name = "fsim-control"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Autopilot: cascaded PID and LQR inner loops, position/velocity control, and a fixed-wing autopilot. no_std-clean."

[features]
default = ["std"]
std = ["fsim-core/std", "nalgebra/std"]

[dependencies]
fsim-core.workspace = true
nalgebra.workspace = true
num-traits.workspace = true

[dev-dependencies]
# Closed-loop tests fly the controller against the real plant.
fsim-dynamics = { workspace = true }
fsim-actuators = { workspace = true }
