[package]
name = "fsim-estimator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "State estimator / AHRS. Complementary filter now; quaternion MEKF later. no_std-clean."

[features]
default = ["std"]
std = ["fsim-core/std", "nalgebra/std"]

[dependencies]
fsim-core.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
