[package]
name = "fsim-viz"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Interactive 3D viewer + egui plots for the Pilotrs simulator (std-only leaf crate)."

[dependencies]
fsim-sim.workspace = true
three-d = { workspace = true, features = ["egui-gui"] }
egui_plot.workspace = true
